結果ページ変更

--- a/app/views/tops/new.html.erb
+++ b/app/views/tops/new.html.erb
@@ -29,9 +29,9 @@
     <%# 器用的 or 専目的 %>
     <p>人付き合いは、「広く浅く」である。</p>
     <%= f.radio_button :ques_three, '1' %>
-    <%= f.label :ques_three, "はい(狭く深く)", {value: 1, style: "display: inline-block;"} %>
+    <%= f.label :ques_three, "はい(広く浅く)", {value: 1, style: "display: inline-block;"} %>
     <%= f.radio_button :ques_three, '0' %>
-    <%= f.label :ques_three, "いいえ(広く浅く)", {value: 0, style: "display: inline-block;"} %>
+    <%= f.label :ques_three, "いいえ(狭く深く)", {value: 0, style: "display: inline-block;"} %>
   </div>
   
   <div class="field-form">
