--- a/app/views/tops/show.html.erb
+++ b/app/views/tops/show.html.erb
@@ -1,12 +1,12 @@
 <%= @top.name %> さんを「もの」に例えると...
 
-<p>●●です!!</p>
+
 
 <%# 00000 %>
 <% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
   <% @answers.each do |answer| %>
     <% if answer.id == 1 %> 
-      <%= answer.answer %>
+      <p><%= answer.answer %>です!!</p>
     <% end %>
   <% end %>
 <% end %>
@@ -15,7 +15,7 @@
 <% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == true %>
   <% @answers.each do |answer| %>
     <% if answer.id == 2 %> 
-      <%= answer.answer %>
+      <p><%= answer.answer %>です!!</p>
     <% end %>
   <% end %>
 <% end %>
@@ -24,7 +24,7 @@
 <% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == true && @top.ques_five == false %>
   <% @answers.each do |answer| %>
     <% if answer.id == 3 %> 
-      <%= answer.answer %>
+      <p><%= answer.answer %>です!!</p>
     <% end %>
   <% end %>
 <% end %>
@@ -33,7 +33,7 @@
 <% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == false && @top.ques_four == true && @top.ques_five == true %>
   <% @answers.each do |answer| %>
     <% if answer.id == 4 %> 
-      <%= answer.answer %>
+      <p><%= answer.answer %>です!!</p>
     <% end %>
   <% end %>
 <% end %>
@@ -42,7 +42,7 @@
 <% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == true && @top.ques_four == false && @top.ques_five == false %>
   <% @answers.each do |answer| %>
     <% if answer.id == 5 %> 
-      <%= answer.answer %>
+      <p><%= answer.answer %>です!!</p>
     <% end %>
   <% end %>
 <% end %>
@@ -51,7 +51,7 @@
 <% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == true && @top.ques_four == false && @top.ques_five == true %>
   <% @answers.each do |answer| %>
     <% if answer.id == 6 %> 
-      <%= answer.answer %>
+      <p><%= answer.answer %>です!!</p>
     <% end %>
   <% end %>
 <% end %>
@@ -60,7 +60,7 @@
 <% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == true && @top.ques_four == true && @top.ques_five == false %>
   <% @answers.each do |answer| %>
     <% if answer.id == 7 %> 
-      <%= answer.answer %>
+      <p><%= answer.answer %>です!!</p>
     <% end %>
   <% end %>
 <% end %>
@@ -69,7 +69,7 @@
 <% if @top.ques_one == false && @top.ques_two == false && @top.ques_three == true && @top.ques_four == true && @top.ques_five == true %>
   <% @answers.each do |answer| %>
     <% if answer.id == 8 %> 
-      <%= answer.answer %>
+      <p><%= answer.answer %>です!!</p>
     <% end %>
   <% end %>
 <% end %>
@@ -78,7 +78,7 @@
 <% if @top.ques_one == false && @top.ques_two == true && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
   <% @answers.each do |answer| %>
     <% if answer.id == 9 %> 
-      <%= answer.answer %>
+      <p><%= answer.answer %>です!!</p>
     <% end %>
   <% end %>
 <% end %>
@@ -87,7 +87,7 @@
 <% if @top.ques_one == false && @top.ques_two == true && @top.ques_three == false && @top.ques_four == false && @top.ques_five == true %>
   <% @answers.each do |answer| %>
     <% if answer.id == 10 %> 
-      <%= answer.answer %>
+      <p><%= answer.answer %>です!!</p>
     <% end %>
   <% end %>
 <% end %>
@@ -96,7 +96,7 @@
 <% if @top.ques_one == false && @top.ques_two == true && @top.ques_three == false && @top.ques_four == true && @top.ques_five == false %>
   <% @answers.each do |answer| %>
     <% if answer.id == 11 %> 
-      <%= answer.answer %>
+      <p><%= answer.answer %>です!!</p>
     <% end %>
   <% end %>
 <% end %>
@@ -105,7 +105,7 @@
 <% if @top.ques_one == false && @top.ques_two == true && @top.ques_three == false && @top.ques_four == true && @top.ques_five == true %>
   <% @answers.each do |answer| %>
     <% if answer.id == 12 %> 
-      <%= answer.answer %>
+      <p><%= answer.answer %>です!!</p>
     <% end %>
   <% end %>
 <% end %>
@@ -114,7 +114,7 @@
 <% if @top.ques_one == false && @top.ques_two == true && @top.ques_three == true && @top.ques_four == false && @top.ques_five == false %>
   <% @answers.each do |answer| %>
     <% if answer.id == 13 %> 
-      <%= answer.answer %>
+      <p><%= answer.answer %>です!!</p>
     <% end %>
   <% end %>
 <% end %>
@@ -123,7 +123,7 @@
 <% if @top.ques_one == false && @top.ques_two == true && @top.ques_three == true && @top.ques_four == false && @top.ques_five == true %>
   <% @answers.each do |answer| %>
     <% if answer.id == 14 %> 
-      <%= answer.answer %>
+      <p><%= answer.answer %>です!!</p>
     <% end %>
   <% end %>
 <% end %>
@@ -132,7 +132,7 @@
 <% if @top.ques_one == false && @top.ques_two == true && @top.ques_three == true && @top.ques_four == true && @top.ques_five == false %>
   <% @answers.each do |answer| %>
     <% if answer.id == 15 %> 
-      <%= answer.answer %>
+      <p><%= answer.answer %>です!!</p>
     <% end %>
   <% end %>
 <% end %>
@@ -141,7 +141,7 @@
 <% if @top.ques_one == false && @top.ques_two == true && @top.ques_three == true && @top.ques_four == true && @top.ques_five == true %>
   <% @answers.each do |answer| %>
     <% if answer.id == 16 %> 
-      <%= answer.answer %>
+      <p><%= answer.answer %>です!!</p>
     <% end %>
   <% end %>
 <% end %>
@@ -150,7 +150,7 @@
 <% if @top.ques_one == true && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
   <% @answers.each do |answer| %>
     <% if answer.id == 17 %> 
-      <%= answer.answer %>
+      <p><%= answer.answer %>です!!</p>
     <% end %>
   <% end %>
 <% end %>
@@ -159,7 +159,7 @@
 <% if @top.ques_one == true && @top.ques_two == false && @top.ques_three == false && @top.ques_four == false && @top.ques_five == true %>
   <% @answers.each do |answer| %>
     <% if answer.id == 18 %> 
-      <%= answer.answer %>
+      <p><%= answer.answer %>です!!</p>
     <% end %>
   <% end %>
 <% end %>
@@ -168,7 +168,7 @@
 <% if @top.ques_one == true && @top.ques_two == false && @top.ques_three == false && @top.ques_four == true && @top.ques_five == false %>
   <% @answers.each do |answer| %>
     <% if answer.id == 19 %> 
-      <%= answer.answer %>
+      <p><%= answer.answer %>です!!</p>
     <% end %>
   <% end %>
 <% end %>
@@ -177,7 +177,7 @@
 <% if @top.ques_one == true && @top.ques_two == false && @top.ques_three == false && @top.ques_four == true && @top.ques_five == true %>
   <% @answers.each do |answer| %>
     <% if answer.id == 20 %> 
-      <%= answer.answer %>
+      <p><%= answer.answer %>です!!</p>
     <% end %>
   <% end %>
 <% end %>
@@ -186,7 +186,7 @@
 <% if @top.ques_one == true && @top.ques_two == false && @top.ques_three == true && @top.ques_four == false && @top.ques_five == false %>
   <% @answers.each do |answer| %>
     <% if answer.id == 21 %> 
-      <%= answer.answer %>
+      <p><%= answer.answer %>です!!</p>
     <% end %>
   <% end %>
 <% end %>
@@ -195,7 +195,7 @@
 <% if @top.ques_one == true && @top.ques_two == false && @top.ques_three == true && @top.ques_four == false && @top.ques_five == true %>
   <% @answers.each do |answer| %>
     <% if answer.id == 22 %> 
-      <%= answer.answer %>
+      <p><%= answer.answer %>です!!</p>
     <% end %>
   <% end %>
 <% end %>
@@ -204,7 +204,7 @@
 <% if @top.ques_one == true && @top.ques_two == false && @top.ques_three == true && @top.ques_four == true && @top.ques_five == false %>
   <% @answers.each do |answer| %>
     <% if answer.id == 23 %> 
-      <%= answer.answer %>
+      <p><%= answer.answer %>です!!</p>
     <% end %>
   <% end %>
 <% end %>
@@ -213,7 +213,7 @@
 <% if @top.ques_one == true && @top.ques_two == false && @top.ques_three == true && @top.ques_four == true && @top.ques_five == true %>
   <% @answers.each do |answer| %>
     <% if answer.id == 24 %> 
-      <%= answer.answer %>
+      <p><%= answer.answer %>です!!</p>
     <% end %>
   <% end %>
 <% end %>
@@ -222,7 +222,7 @@
 <% if @top.ques_one == true && @top.ques_two == true && @top.ques_three == false && @top.ques_four == false && @top.ques_five == false %>
   <% @answers.each do |answer| %>
     <% if answer.id == 25 %> 
-      <%= answer.answer %>
+      <p><%= answer.answer %>です!!</p>
     <% end %>
   <% end %>
 <% end %>
@@ -231,7 +231,7 @@
 <% if @top.ques_one == true && @top.ques_two == true && @top.ques_three == false && @top.ques_four == false && @top.ques_five == true %>
   <% @answers.each do |answer| %>
     <% if answer.id == 26 %> 
-      <%= answer.answer %>
+      <p><%= answer.answer %>です!!</p>
     <% end %>
   <% end %>
 <% end %>
@@ -240,7 +240,7 @@
 <% if @top.ques_one == true && @top.ques_two == true && @top.ques_three == false && @top.ques_four == true && @top.ques_five == false %>
   <% @answers.each do |answer| %>
     <% if answer.id == 27 %> 
-      <%= answer.answer %>
+      <p><%= answer.answer %>です!!</p>
     <% end %>
   <% end %>
 <% end %>
@@ -249,7 +249,7 @@
 <% if @top.ques_one == true && @top.ques_two == true && @top.ques_three == false && @top.ques_four == true && @top.ques_five == true %>
   <% @answers.each do |answer| %>
     <% if answer.id == 28 %> 
-      <%= answer.answer %>
+      <p><%= answer.answer %>です!!</p>
     <% end %>
   <% end %>
 <% end %>
@@ -258,7 +258,7 @@
 <% if @top.ques_one == true && @top.ques_two == true && @top.ques_three == true && @top.ques_four == false && @top.ques_five == false %>
   <% @answers.each do |answer| %>
     <% if answer.id == 29 %> 
-      <%= answer.answer %>
+      <p><%= answer.answer %>です!!</p>
     <% end %>
   <% end %>
 <% end %>
@@ -267,7 +267,7 @@
 <% if @top.ques_one == true && @top.ques_two == true && @top.ques_three == true && @top.ques_four == false && @top.ques_five == true %>
   <% @answers.each do |answer| %>
     <% if answer.id == 30 %> 
-      <%= answer.answer %>
+      <p><%= answer.answer %>です!!</p>
     <% end %>
   <% end %>
 <% end %>
@@ -276,7 +276,7 @@
 <% if @top.ques_one == true && @top.ques_two == true && @top.ques_three == true && @top.ques_four == true && @top.ques_five == false %>
   <% @answers.each do |answer| %>
     <% if answer.id == 31 %> 
-      <%= answer.answer %>
+      <p><%= answer.answer %>です!!</p>
     <% end %>
   <% end %>
 <% end %>
@@ -285,7 +285,7 @@
 <% if @top.ques_one == true && @top.ques_two == true && @top.ques_three == true && @top.ques_four == true && @top.ques_five == true %>
   <% @answers.each do |answer| %>
     <% if answer.id == 32 %> 
-      <%= answer.answer %>
+      <p><%= answer.answer %>です!!</p>
     <% end %>
   <% end %>
 <% end %>
