topの位置調整

--- a/app/views/tops/top.html.erb
+++ b/app/views/tops/top.html.erb
@@ -1,4 +1,6 @@
-<h1>あなたをものに例えると！？！？</h1>
-<h2>5つの質問に答えるだけで、あなたの正体丸わかり!!!</h2>
+<div class="top">
+  <h1>あなたを「もの」に例えると!?!?</h1>
+  <h2>5つの質問に答えるだけで、あなたの正体丸わかり!!!</h2>
 
-<%= link_to '質問に回答する', new_top_path %>
+  <%= link_to '次へ', new_top_path %>
+</div>
