--- a/app/views/tops/top.html.erb
+++ b/app/views/tops/top.html.erb
@@ -1,5 +1,5 @@
 <div class="top">
-  <h1>あなたを「もの」に例えると!?!?</h1>
+  <h1>あなたを「<span class="strong">もの</span>」に例えると!?!?</h1>
   <h2>5つの質問に答えるだけで、あなたの正体丸わかり!!!</h2>
 
   <%= link_to '次へ', new_top_path %>
