--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,12 @@
   </head>
 
   <body>
-    <div class='container'>
-      <%= yield %>
-    </div>
+    <div class="bg_pattern Polka"></div>
+    <div class="section">
+      <div class='container'>
+        <%= yield %>
+      </div>
+    </div>    
   </body>
 </html>
+
