回答ページ1

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,6 +24,7 @@
   opacity: 0.4;
   z-index: -1;
 }
+
 .Polka {
   background-image: radial-gradient(#ffc107 2px, #ffffff 2px);
   background-size: 20px 20px;
@@ -33,14 +34,17 @@ html, body {
   margin: 0;
   padding: 0;
 }
+
 body {
   font-family: YuGothic, "游ゴシック体", "Yu Gothic", "ヒラギノ角ゴ Pro", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
   letter-spacing: .025em;
   line-height: 1.8;
 }
+
 * {
   box-sizing: border-box;
 }
+
 .section {
   max-width: 1024x;
   margin: 0 auto;
@@ -49,22 +53,23 @@ body {
 ._a {
   max-width: 300px;
   margin: 0 auto;  
-}
-._a a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  padding: 2.0em 1.0em;
-  border: 1px solid #222222;
-  background: linear-gradient(to right, #ffffff 50%, #222222 50%);
-  background-size: 200% auto;
-  color: #222222;
-  font-size: 12px;
-  text-decoration: none;
-  text-align: center;
-  transition: .3s;
-  position: relative;
+
+  a { 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 2.0em 1.0em;
+    border: 1px solid #222222;
+    background: linear-gradient(to right, #ffffff 50%, #222222 50%);
+    background-size: 200% auto;
+    color: #222222;
+    font-size: 12px;
+    text-decoration: none;
+    text-align: center;
+    transition: .3s;
+    position: relative;
+  }
 }
 
 
@@ -93,4 +98,8 @@ body {
       text-decoration: none;
     }
   }
+}
+
+.top-new{
+  margin: 100px 30px;
 }
