--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -102,4 +102,21 @@ body {
 
 .top-new{
   margin: 100px 30px;
+
+  .top-new-title{
+    font-size: 40px;
+    font-weight: bold;
+  }
+
+  .question{
+    font-size: 30px;
+  }
+
+  .top-body{
+    margin: 50px 0;
+  }
+
+  .field-form{
+    margin: 60px 0;
+  }
 }
