--- a/app/views/tops/new.html.erb
+++ b/app/views/tops/new.html.erb
@@ -1,55 +1,56 @@
 <div class="top-new">
-  <h1>質問は5つあります</h1>
+  <h1 class="top-new-title">質問は5つあります</h1>
 
   <%= form_with(modal: @top, url: tops_path, local: true) do |f| %>
-    
-    <div class="field-form">
-      <%= f.label :name, '名前を入力してください' %>
-      <%= f.text_field :name, autofocus: true, placeholder: "名前" %>
-    </div>
+    <div class="top-body">    
+      <div class="field-form">
+        <%= f.label :name, '名前を入力してください', class: 'question' %>
+        <%= f.text_field :name, autofocus: true, placeholder: "名前" %>
+      </div>
 
-    <div class="field-form">
-      <p>朝型である</p>
-      <%= f.radio_button :ques_one, true %>
-      <%= f.label :ques_one, "はい(朝型)", {value: true, style: "display: inline-block;"} %>
-      <%= f.radio_button :ques_one, false %>
-      <%= f.label :ques_one, "いいえ(夜型)", {value: false, style: "display: inline-block;"} %>
-    </div>
+      <div class="field-form">
+        <p class=question>朝型である</p>
+        <%= f.radio_button :ques_one, true %>
+        <%= f.label :ques_one, "はい(朝型)", {value: true, style: "display: inline-block;"} %>
+        <%= f.radio_button :ques_one, false %>
+        <%= f.label :ques_one, "いいえ(夜型)", {value: false, style: "display: inline-block;"} %>
+      </div>
 
-    <div class="field-form">
-      <p>話をする方が好きだ。</p>
-      <%= f.radio_button :ques_two, '1' %>
-      <%= f.label :ques_two, "はい(話をする方が好き)", {value: 1, style: "display: inline-block;"} %>
-      <%= f.radio_button :ques_two, '0' %>
-      <%= f.label :ques_two, "いいえ(聞く方が好き)", {value: 0, style: "display: inline-block;"} %>
-    </div>
+      <div class="field-form">
+        <p class=question>話をする方が好きだ。</p>
+        <%= f.radio_button :ques_two, '1' %>
+        <%= f.label :ques_two, "はい(話をする方が好き)", {value: 1, style: "display: inline-block;"} %>
+        <%= f.radio_button :ques_two, '0' %>
+        <%= f.label :ques_two, "いいえ(聞く方が好き)", {value: 0, style: "display: inline-block;"} %>
+      </div>
 
-    <div class="field-form">
-      <p>人付き合いは、「広く浅く」である。</p>
-      <%= f.radio_button :ques_three, '1' %>
-      <%= f.label :ques_three, "はい(広く浅く)", {value: 1, style: "display: inline-block;"} %>
-      <%= f.radio_button :ques_three, '0' %>
-      <%= f.label :ques_three, "いいえ(狭く深く)", {value: 0, style: "display: inline-block;"} %>
-    </div>
-    
-    <div class="field-form">
-      <p>行動は計画的である。</p>
-      <%= f.radio_button :ques_four, '1' %>
-      <%= f.label :ques_four, "はい(計画的に行動する)", {value: 1, style: "display: inline-block;"} %>
-      <%= f.radio_button :ques_four, '0' %>
-      <%= f.label :ques_four, "いいえ(偶発的に行動する)", {value: 0, style: "display: inline-block;"} %>
-    </div>
+      <div class="field-form">
+        <p class=question>人付き合いは、「広く浅く」である。</p>
+        <%= f.radio_button :ques_three, '1' %>
+        <%= f.label :ques_three, "はい(広く浅く)", {value: 1, style: "display: inline-block;"} %>
+        <%= f.radio_button :ques_three, '0' %>
+        <%= f.label :ques_three, "いいえ(狭く深く)", {value: 0, style: "display: inline-block;"} %>
+      </div>
+      
+      <div class="field-form">
+        <p class=question>行動は計画的である。</p>
+        <%= f.radio_button :ques_four, '1' %>
+        <%= f.label :ques_four, "はい(計画的に行動する)", {value: 1, style: "display: inline-block;"} %>
+        <%= f.radio_button :ques_four, '0' %>
+        <%= f.label :ques_four, "いいえ(偶発的に行動する)", {value: 0, style: "display: inline-block;"} %>
+      </div>
 
-    <div class="field-form">
-      <p>臨機応変に対応できる</p>
-      <%= f.radio_button :ques_five, '1' %>
-      <%= f.label :ques_five, "はい(臨機応変に対応できる)", {value: 1, style: "display: inline-block;"} %>
-      <%= f.radio_button :ques_five, '0' %>
-      <%= f.label :ques_five, "いいえ(計画に忠実)", {value: 0, style: "display: inline-block;"} %>
-    </div>
+      <div class="field-form">
+        <p class=question>臨機応変に対応できる</p>
+        <%= f.radio_button :ques_five, '1' %>
+        <%= f.label :ques_five, "はい(臨機応変に対応できる)", {value: 1, style: "display: inline-block;"} %>
+        <%= f.radio_button :ques_five, '0' %>
+        <%= f.label :ques_five, "いいえ(計画に忠実)", {value: 0, style: "display: inline-block;"} %>
+      </div>
 
-    <div class="field-form">
-      <%= f.submit "作成" %>
+      <div class="field-form">
+        <%= f.submit "作成" %>
+      </div>
     </div>
 
   <% end %>
