--- a/app/views/tops/top.html.erb
+++ b/app/views/tops/top.html.erb
@@ -2,8 +2,6 @@
   <h1>あなたを「<span class="strong">もの</span>」に例えると!?!?</h1>
   <h2>5つの質問に答えるだけで、あなたの正体丸わかり!!!</h2>
     <div class="top-link d-grid gap-2 col-6 mx-auto">
-      <a href="https://125naroom.com/web/3737">
-        <%= link_to '次へ', new_top_path, class: 'nextpage btn btn-primary btn-lg _a' %>
-      </a>
+        <%= link_to '次へ', new_top_path, class: 'nextpage btn btn-primary btn-lg' %>
     </div>
 </div>
