回答ページ完成

--- a/app/views/tops/new.html.erb
+++ b/app/views/tops/new.html.erb
@@ -48,9 +48,10 @@
         <%= f.label :ques_five, "いいえ(計画に忠実)", {value: 0, style: "display: inline-block;", class:"fs-5"} %>
       </div>
 
-      <div class="field-form">
-        <%= f.submit "作成" %>
+      <div class="top-link d-grid gap-2">
+        <%= f.submit "作成", class: 'nextpage btn btn-primary btn-lg' %>
       </div>
+
     </div>
 
   <% end %>
