--- a/app/views/tops/new.html.erb
+++ b/app/views/tops/new.html.erb
@@ -1,5 +1,5 @@
 <div class="top-new">
-  <h1 class="top-new-title">質問は5つあります</h1>
+  <h1 class="top-new-title">質問は5です</h1>
 
   <%= form_with(modal: @top, url: tops_path, local: true) do |f| %>
     <div class="top-body">    
@@ -19,15 +19,15 @@
       <div class="field-form">
         <p class=question>話をする方が好きだ。</p>
         <%= f.radio_button :ques_two, '1' %>
-        <%= f.label :ques_two, "はい(話をする方が好き)", {value: 1, style: "display: inline-block;", class:"fs-5"} %>
+        <%= f.label :ques_two, "はい(話し手になるが好き)", {value: 1, style: "display: inline-block;", class:"fs-5"} %>
         <%= f.radio_button :ques_two, '0' %>
-        <%= f.label :ques_two, "いいえ(聞く方が好き)", {value: 0, style: "display: inline-block;", class:"fs-5"} %>
+        <%= f.label :ques_two, "いいえ(聞き手の方が好き)", {value: 0, style: "display: inline-block;", class:"fs-5"} %>
       </div>
 
       <div class="field-form">
         <p class=question>人付き合いは、「広く浅く」である。</p>
         <%= f.radio_button :ques_three, '1' %>
-        <%= f.label :ques_three, "はい(広く浅く)", {value: 1, style: "display: inline-block;", class:"fs-5"} %>
+        <%= f.label :ques_three, "はい(交友関係は広く浅く)", {value: 1, style: "display: inline-block;", class:"fs-5"} %>
         <%= f.radio_button :ques_three, '0' %>
         <%= f.label :ques_three, "いいえ(狭く深く)", {value: 0, style: "display: inline-block;", class:"fs-5"} %>
       </div>
@@ -35,15 +35,15 @@
       <div class="field-form">
         <p class=question>行動は計画的である。</p>
         <%= f.radio_button :ques_four, '1' %>
-        <%= f.label :ques_four, "はい(計画的に行動する)", {value: 1, style: "display: inline-block;", class:"fs-5"} %>
+        <%= f.label :ques_four, "はい(計画してから行動する)", {value: 1, style: "display: inline-block;", class:"fs-5"} %>
         <%= f.radio_button :ques_four, '0' %>
-        <%= f.label :ques_four, "いいえ(偶発的に行動する)", {value: 0, style: "display: inline-block;", class:"fs-5"} %>
+        <%= f.label :ques_four, "いいえ(偶発的に行動)", {value: 0, style: "display: inline-block;", class:"fs-5"} %>
       </div>
 
       <div class="field-form">
         <p class=question>臨機応変に対応できる</p>
         <%= f.radio_button :ques_five, '1' %>
-        <%= f.label :ques_five, "はい(臨機応変に対応できる)", {value: 1, style: "display: inline-block;", class:"fs-5"} %>
+        <%= f.label :ques_five, "はい(臨機応変に対応可能)", {value: 1, style: "display: inline-block;", class:"fs-5"} %>
         <%= f.radio_button :ques_five, '0' %>
         <%= f.label :ques_five, "いいえ(計画に忠実)", {value: 0, style: "display: inline-block;", class:"fs-5"} %>
       </div>
