結果ページ完成

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -102,3 +102,19 @@ body {
     margin: 60px 0;
   }
 }
+
+.top-show{
+  margin: 100px 30px;
+  text-align: center;
+
+  .top-show-body{
+    font-size: 30px;
+    margin: 100px 0px;
+
+    .top-answer{
+      font-weight: bold;
+      font-size: 100px;
+      flood-color: red;
+    }
+  }
+}
