--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -84,6 +84,7 @@ body {
   .top-new-title{
     font-size: 40px;
     font-weight: bold;
+
   }
 
   .question{
@@ -107,6 +108,10 @@ body {
   margin: 100px 30px;
   text-align: center;
 
+  .strong{
+    color: red;
+  }
+  
   .top-show-body{
     font-size: 30px;
     margin: 100px 0px;
