テキスト修正

--- a/app/views/tops/new.html.erb
+++ b/app/views/tops/new.html.erb
@@ -1,5 +1,5 @@
 <div class="top-new">
-  <h1 class="top-new-title">質問は5です</h1>
+  <h1 class="top-new-title">質問は5つです</h1>
 
   <%= form_with(modal: @top, url: tops_path, local: true) do |f| %>
     <div class="top-body">    
