--- a/app/views/tops/new.html.erb
+++ b/app/views/tops/new.html.erb
@@ -1,3 +1,14 @@
+<% if @top.errors.any? %>
+  <div class="alert alert-danger" role="alert">
+    <h4 class="alert-heading"><%= pluralize(@top.errors.count, "個のエラーがあります") %></h4>
+    <hr>
+    <p class="mb-0">
+      <% @top.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </p>
+  </div>
+<% end %>
 <div class="top-new">
   <h1 class="top-new-title">質問は5つです</h1>
 
